--- a/index_pie_repoff_by_origin.html
+++ b/index_pie_repoff_by_origin.html
@@ -63,12 +63,12 @@
 var pie = new d3pie("pieChart", {
 	"header": {
 		"title": {
-			"text": "Representative Offices by Province, January-June 2017",
+			"text": "NGO Representative Offices' Country/Region of Origin, January-June 2017",
 			"fontSize": 40,
 			"font": "DrukText"
 		},
 		"subtitle": {
-			"text": "Number of Representative Offices Registered in Each Province, Region, and City by as of June 30, 2017",
+			"text": "Number of Representative Offices from Various Countries or Areas of the World as of June 30, 2017",
 			"color": "#3c3c3c",
 			"fontSize": 18,
 			"font": "PortraitText"
@@ -90,100 +90,105 @@ var pie = new d3pie("pieChart", {
 		"sortOrder": "value-desc",
 		"content": [
 			{
-				"label": "Beijing",
-				"value": 40,
+				"label": "United States",
+				"value": 37,
 				"color": "#ff0032"
 			},
 			{
-				"label": "Shanghai",
-				"value": 35,
+				"label": "Hong Kong",
+				"value": 29,
 				"color": "#999999"
 			},
 			{
-				"label": "Guangdong",
+				"label": "Germany",
 				"value": 12,
 				"color": "#ff335c"
 			},
 			{
-				"label": "Yunnan",
-				"value": 9,
+				"label": "South Korea",
+				"value": 12,
 				"color": "#cccccc"
 			},
       {
-        "label": "Sichuan",
-        "value": 5,
+        "label": "Japan",
+        "value": 11,
         "color": "#666666"
       },
       {
-        "label": "Tianjin",
-        "value": 5,
+        "label": "United Kingdom",
+        "value": 6,
         "color": "#ff5c7c"
       },
       {
-        "label": "Liaoning",
+        "label": "France",
         "value": 4,
         "color": "#b80025"
       },
       {
-				"label": "Shandong",
+				"label": "Switzerland",
 				"value": 4,
 				"color": "#d8d8d8"
 			},
       {
-				"label": "Hunan",
+				"label": "Australia",
 				"value": 3,
 				"color": "#555555"
 			},
       {
-				"label": "Jiangsu",
+				"label": "Taiwan",
 				"value": 3,
 				"color": "#ff708d"
 			},
       {
-        "label": "Shaanxi",
-        "value": 3,
+        "label": "Canada",
+        "value": 2,
         "color": "#8f001d"
       },
       {
-				"label": "Gansu",
+				"label": "Macau",
 				"value": 2,
 				"color": "#e6e6e6"
 			},
       {
-				"label": "Hubei",
-				"value": 2,
+				"label": "Denmark",
+				"value": 1,
 				"color": "#3c3c3c"
 			},
-			{
-				"label": "Chongqing",
-				"value": 1,
-				"color": "#ffadbe"
-			},
-			{
-				"label": "Guangxi",
-				"value": 1,
-				"color": "#520010"
-			},
-			{
-				"label": "Guizhou",
-				"value": 1,
-				"color": "#f2f2f2"
-			},
-			{
-				"label": "Heilongjiang",
-				"value": 1,
-				"color": "#231f1f"
-			},
-			{
-				"label": "Jiangxi",
-				"value": 1,
-				"color": "#ffebef"
-			},
-			{
-				"label": "Tibet",
-				"value": 1,
-				"color": "#290008"
-			}
+      {
+        "label": "India",
+        "value": 1,
+        "color": "#ffadbe"
+      },
+      {
+        "label": "Malaysia",
+        "value": 1,
+        "color": "#520010"
+      },
+      {
+        "label": "Mongolia",
+        "value": 1,
+        "color": "#f2f2f2"
+      },
+      {
+        "label": "New Zealand",
+        "value": 1,
+        "color": "#231f1f"
+      },
+      {
+        "label": "Russia",
+        "value": 1,
+        "color": "#ffebef"
+      },
+      {
+        "label": "Spain",
+        "value": 1,
+        "color": "#290008"
+      },
+      {
+        "label": "United Arab Emirates",
+        "value": 1,
+        "color": "#ffffff"
+      }
 		]
 	},
 	"labels": {
