--- a/index_dashtest.html
+++ b/index_dashtest.html
@@ -171,7 +171,7 @@ padding:0px;
 </div>
 
 
-<script src="http://d3js.org/d3.v3.min.js"></script>
+<script src="//d3js.org/d3.v3.min.js"></script>
 <script>
 
 
