--- a/index_RO_choro.html
+++ b/index_RO_choro.html
@@ -143,7 +143,7 @@
     </div>
 
 
-    <script src="http://d3js.org/d3.v3.min.js" charset="utf-8"></script>
+    <script src="//d3js.org/d3.v3.min.js" charset="utf-8"></script>
   <script>
 
   //code taken from both http://bl.ocks.org/fraserxu/fc1217314735bf608df3 and http://bl.ocks.org/KoGor/5685876
