--- a/index_pie_repoff_by_prov.html
+++ b/index_pie_repoff_by_prov.html
@@ -63,16 +63,11 @@
 var pie = new d3pie("pieChart", {
 	"header": {
 		"title": {
-			"text": "Representative Offices by Province, January-June 2017",
+			"text": "Number of Representative Offices Registered in Each Province, January-June 2017",
 			"fontSize": 40,
 			"font": "DrukText"
 		},
-		"subtitle": {
-			"text": "Number of Representative Offices Registered in Each Province, Region, and City by as of June 30, 2017",
-			"color": "#3c3c3c",
-			"fontSize": 18,
-			"font": "PortraitText"
-		},
+		
 		"titleSubtitlePadding": 9
 	},
 	"footer": {
