--- a/index_RO_dash1.html
+++ b/index_RO_dash1.html
@@ -162,7 +162,7 @@ padding:0px;
 
 
 <div id="wrapper">
-<div id="header"><h1>Fields of Work by Office and Province, January-June 2017</h1><h2>The Number of Foreign NGOs Engaged in Certain Sectors of Work, as Distributed Throughout China</h2></div>
+<div id="header"><h1>Representative Offices’ Fields of Work by Province, January-June 2017</h1></div>
 <div id='legenddiv'></div>
 <div id='piediv'></div>
 
