--- a/index_pie_repoff_by_prov.html
+++ b/index_pie_repoff_by_prov.html
@@ -49,27 +49,74 @@
   font-weight: 500;
   font-style: italic;
 }
+
+h1 {
+    font-family:DrukText;
+    font-size: 40px;
+    display: block;
+}
+
+
+h2 {
+    font-family:PortraitText;
+    font-size: 18px;
+    color: #3c3c3c;
+    font-weight: normal;
+    line-height:12PX;
+}
+
+div.tooltip {
+  overflow:hidden;
+  max-width: 90%;
+  position:relative;
+  top:-120px;
+  height: auto;
+  border-radius: 8px;
+  font: 14px PortraitText;
+  padding: 5px;
+  text-align: left;
+}
+
+#wrapper {
+width:95%;
+max-width: 770px;
+margin:0 auto;
+overflow:hidden;
+}
+
+#header
+{
+overflow:hidden;
+max-width: 90%;
+margin-bottom:5px;
+text-align:center;
+vertical-align: text-top;
+}
+
+#pieChart {
+position:relative;
+left:-50px;
+top:-80px;
+}
+
+
 </style>
 </head>
 
 
 <body>
-
+<div id="wrapper">
+<div id="header"><h1>Number of Representative Offices Registered in Each Province, January-June 2017</h1></div>
 <div id="pieChart"></div>
+</div>
 
 <script src="//cdnjs.cloudflare.com/ajax/libs/d3/4.7.2/d3.min.js"></script>
 <script src="d3pie.min.js"></script>
 <script>
+
+
+
 var pie = new d3pie("pieChart", {
-	"header": {
-		"title": {
-			"text": "Number of Representative Offices Registered in Each Province, January-June 2017",
-			"fontSize": 40,
-			"font": "DrukText"
-		},
-		
-		"titleSubtitlePadding": 9
-	},
 	"footer": {
 		"color": "#999999",
 		"fontSize": 10,
@@ -223,6 +270,11 @@ var pie = new d3pie("pieChart", {
 		}
 	}
 });
+
+d3.select("body").append("div")
+.attr("class", "tooltip")
+.html("<em><ul><li>&ldquo;Province&rdquo; here also refers to provincial-level municipalities and autonomous regions.</li><li>For foreign NGOs that have opened multiple representative offices, each office is included in these totals.</li><li>Only provinces that have registered foreign NGO representative offices are shown here.</li></ul></em>");
+
 </script>
 
 </body>
