--- a/index_pie_repoff_by_prov.html
+++ b/index_pie_repoff_by_prov.html
@@ -49,7 +49,13 @@
   font-weight: 500;
   font-style: italic;
 }
-
+	
+body{
+    max-width:800px;
+    max-height:500px;
+    font-size:88%;
+}
+	
 h1 {
     font-family:DrukText;
     font-size: 40px;
