--- a/index_pie_repoff_by_prov.html
+++ b/index_pie_repoff_by_prov.html
@@ -273,7 +273,10 @@ var pie = new d3pie("pieChart", {
 		"gradient": {
 			"enabled": true,
 			"percentage": 100
-		}
+		},
+		"canvasPadding":{
+      "top":30,"right":5,"bottom":0,"left":5}
+	}
 	}
 });
 
