--- a/index_TA_by_sector.html
+++ b/index_TA_by_sector.html
@@ -310,7 +310,7 @@ var pie = new d3pie("pieChart", {
 });
 d3.select("body").append("div")
 .attr("class", "tooltip")
-.html("<em><ul><li>Each foreign NGO representative office may be engaged in multiple fields of work, as listed on the Ministry of Public Security website, and therefore the totals shown in this chart are higher than the total number of representative offices during the same period.</li><li>Only activities that began on or before June 30, 2017 are shown here. The duration of any given temporary activity may extend beyond that date.</li></ul></em>");
+.html("<em><ul><li>Any given temporary activity may be related to multiple fields of work, and therefore the totals shown in this chart are higher than the total number of temporary activities during the same period.</li><li>Only activities that began on or before June 30, 2017 are shown here. The duration of any given temporary activity may extend beyond that date.</li></ul></em>");
 
 
 </script>
