--- a/index_TA_dash1.html
+++ b/index_TA_dash1.html
@@ -1128,7 +1128,6 @@ dashboard('#dashboard',freqData);
 
 d3.select("body").append("div")
 .attr("class", "tooltip1")
-.html("<em><ul><li>&ldquo;Province&rdquo; here also refers to provincial-level municipalities and autonomous regions.</li><li>Each foreign NGO representative office may be engaged in multiple fields of work, as listed on the Ministry of Public Security website, and therefore the totals shown in this chart are higher than the total number of representative offices during the same period.</li><li>Each representative office has only one country or region or origin, as listed by the Ministry of Public Security website.</li><li>For foreign NGOs that have opened multiple representative offices, each office is included in these totals.</li></ul></em>");
+.html("<em><ul><li>&ldquo;Province&rdquo; here also refers to provincial-level municipalities and autonomous regions.</li><li>Any given temporary activity may be related to multiple fields of work, and therefore the totals shown in this chart are higher than the total number of temporary activities during the same period.</li><li>Only activities that began on or before June 30, 2017 are shown here. The duration of any given temporary activity may extend beyond that date.</li></ul></em>");
 
 </script>
-
