--- a/index_TA_by_prov.html
+++ b/index_TA_by_prov.html
@@ -253,6 +253,11 @@ var pie = new d3pie("pieChart", {
 				"label": "Tibet",
 				"value": 1,
 				"color": "#f2f2f2"
+			},
+			{
+				"label": "All of China",
+				"value": 1,
+				"color": "#f2f2f2"
 			}
 		]
 	},
