--- a/index_TA_by_prov.html
+++ b/index_TA_by_prov.html
@@ -310,7 +310,7 @@ var pie = new d3pie("pieChart", {
 
 d3.select("body").append("div")
 .attr("class", "tooltip")
-.html("<em><ul><li>&ldquo;Province&rdquo; here also refers to provincial-level municipalities and autonomous regions.</li><li>Only activities that began on or before June 30, 2017 are shown here. The duration of any given temporary activity may extend beyond that date.</li></ul></em>");
+.html("<em><ul><li>&ldquo;Province&rdquo; here also refers to provincial-level municipalities and autonomous regions.</li><li>One temporary activity may take place in multiple provinces; this chart shows all provinces where activities have taken place, therefore one activity may be shown as taking place in multiple provinces.</li><li>Only activities that began on or before June 30, 2017 are shown here. The duration of any given temporary activity may extend beyond that date.</li></ul></em>");
 
 </script>
 
