--- a/index_TA_choro.html
+++ b/index_TA_choro.html
@@ -1,1 +1,293 @@
+<!DOCTYPE html>
+<html>
+  <head>
+    <meta charset="utf-8">
+    <title>Foreign NGO Representative Offices by Province</title>
+  </head>
+  <style>
+
+
+  @font-face {
+     font-family: 'DrukText';
+     src: url('./fonts/Druk-Medium-Web.woff');
+     font-weight: 500;
+     font-style: normal;
+   }
+   @font-face {
+     font-family: 'DrukText';
+     src: url('./fonts/Druk-MediumItalic-Web.woff');
+     font-weight: 500;
+     font-style: italic;
+   }
+   @font-face {
+     font-family: 'DrukText';
+     src: url('./fonts/Druk-Bold-Web.woff');
+     font-weight: 700;
+     font-style: normal;
+   }
+   @font-face {
+     font-family: 'DrukText';
+     src: url('./fonts/Druk-BoldItalic-Web.woff');
+     font-weight: 700;
+     font-style: italic;
+   }
+  @font-face {
+    font-family: 'PortraitText';
+    src: url('./fonts/Portrait-Regular-Web.woff');
+    font-weight: 400;
+    font-style: normal;
+  }
+  @font-face {
+    font-family: 'PortraitText';
+    src: url('./fonts/Portrait-RegularItalic-Web.woff');
+    font-weight: 400;
+    font-style: italic;
+  }
+  @font-face {
+    font-family: 'PortraitText';
+    src: url('./fonts/Portrait-Medium-Web.woff');
+    font-weight: 500;
+    font-style: normal;
+  }
+  @font-face {
+    font-family: 'PortraitText';
+    src: url('./fonts/Portrait-MediumItalic-Web.woff');
+    font-weight: 500;
+    font-style: italic;
+  }
+
+  h1 {
+      font-family:DrukText;
+      font-size: 40px;
+      display: block;
+  }
+
+
+  h2 {
+      font-family:PortraitText;
+      font-size: 18px;
+      color: #3c3c3c;
+      font-weight: normal;
+      line-height:12PX;
+
+  }
+
+  path {
+    stroke:white;
+    stroke-width: 1px;
+  }
+
+  .province {
+    fill: none;
+    stroke: #aaa;
+    stroke-width: 0.2px;
+    stroke-linejoin: round;
+  }
+
+  .legend {
+    font: 16px DrukText;
+  }
+
+  div.tooltip {
+    position: absolute;
+    top:220px;
+    left: 40px;
+    min-width: 80px;
+    height: auto;
+    background: none repeat scroll 0 0 #cccccc;
+    border-radius: 8px;
+    font: 20px DrukText;
+    padding: 5px;
+    text-align: center;
+    border: 1px;
+    pointer-events: none;
+  }
+  div.tooltip1 {
+    overflow:hidden;
+    max-width: 90%;
+    height: auto;
+    border-radius: 0px;
+    font: 14px PortraitText;
+    padding: 0px;
+    text-align: left;
+  }
+
+  .axis path, .axis line {
+    fill: none;
+    stroke: black;
+    shape-rendering: crispEdges;
+  }
+  .axis text {
+    font-family: sans-serif;
+    font-size: 11px;
+  }
+
+  #wrapper
+  {
+  width:95%;
+  max-width: 850px;
+  margin:0 auto;
+  overflow:hidden;
+  }
+  #header
+  {
+  overflow:hidden;
+  max-width: 90%;
+  margin-bottom:5px;
+  text-align:center;
+  vertical-align: text-top;
+  }
+  #mapdiv {
+  }
+
+
+  </style>
+
+  <body>
+
+    <div id="wrapper">
+    <div id="header"><h1>Map of Temporary Activities by Province, January-June 2017</h1></div>
+    <div id='mapdiv'></div>
+    </div>
+
+
+    <script src="https://d3js.org/d3.v3.min.js" charset="utf-8"></script>
+  <script>
+
+  //code taken from both http://bl.ocks.org/fraserxu/fc1217314735bf608df3 and http://bl.ocks.org/KoGor/5685876
+
+
+    var formatNumber = d3.format(",f")
+    var bodyNode = d3.select('body').node()
+
+
+    var color_domain = [5, 10, 15, 20, 30]
+    var ext_color_domain = [0, 5, 10, 15, 20, 30]
+    var legend_labels = ["< 5", "5-9", "10-14", "15-19", "20-29", "≥ 30"]
+    var color = d3.scale.threshold()
+    .domain(color_domain)
+    .range(["#ffc2ce", "#ff708d", "#ff1f4b", "#cc0029", "#7a0018", "#290008"]);
+
+
+    var div = d3.select("body").append("div")
+    .attr("class", "tooltip")
+    .style("opacity", 0);
+
+    var Choropleth = function(json, options) {
+      var projection = options.projection
+      var w = options.width || 960
+      var h = options.height || 600
+      var path = options.path
+
+
+      var svg = d3.select(mapdiv)
+        .append('svg')
+        .attr('width', w)
+        .attr('height', h)
+
+      svg.selectAll('path')
+        .attr('class', 'province')
+        .data(json.features)
+        .enter()
+        .append('path')
+        .attr('d', path)
+        .style('fill', function(d) {
+          var total = d.properties.total
+          if (total) { return color(d.properties.total); }
+           else {
+            return '#e6e6e6'
+          }
+        })
+        .style("opacity", 0.6)
+
+
+//Adding mouseevents
+        .on("mouseover", function(d) {
+          d3.select(this).transition().duration(300).style("opacity", 1);
+          div.transition().duration(300)
+          .style("opacity", 1)
+          div.text(d.properties.name + ": " + d.properties.total)
+          //add the following two lines back in if you want the tooltip to float with the mouse
+          .style("left", (d3.event.pageX) + "px")
+          .style("top", (d3.event.pageY -30) + "px")
+          ;
+        })
+        .on("mouseout", function() {
+          d3.select(this)
+          .transition().duration(300)
+          .style("opacity", 0.8);
+          div.transition().duration(300)
+          .style("opacity", 0);
+        })
+
+
+      // legend
+      var legend  = svg.selectAll('g.legend')
+        .data(ext_color_domain)
+        .enter()
+        .append('g')
+        .attr('class', 'legend')
+
+      var ls_w = 20, ls_h = 20
+
+      legend.append('rect')
+        .attr('x', 20)
+        .attr('y', function(d, i) { return h - (i*ls_h) - 2*ls_h })
+        .attr('width', ls_w)
+        .attr('height', ls_h)
+        .style("fill", function(d, i) { return color(d); })
+        .style("opacity", 1)
+
+      legend.append('text')
+        .attr('x', 50)
+        .attr('y', function(d, i){ return h - (i*ls_h) - ls_h - 4})
+        .text(function(d, i){ return legend_labels[i]; })
+    }
+
+    var w = 850
+    var h = 600
+    var colors = ['rgb(237,248,233)', 'rgb(186,228,179)', 'rgb(116,196,118)', 'rgb(49,163,84)','rgb(0,109,44)']
+    var projection = d3.geo.mercator().center([105, 38]).scale(750).translate([w/2, h/2])
+    var path = d3.geo.path().projection(projection)
+    var colorScale = d3.scale.quantize().range(colors)
+
+    d3.csv('TAbyprov_2017-06-30.csv', function(data) {
+      colorScale.domain([ d3.min(data, function(d) { return d.total }), d3.max(data, function(d) { return d.total })])
+
+      d3.json('china_provinces1.json', function(json) {
+        for (var i = 0; i < data.length; i++) {
+          var dataProvince = data[i].name
+          var total = parseInt(data[i].total)
+          for (var j = 0; j < json.features.length; j++) {
+            var jsonProvince = json.features[j].properties.name
+            if (jsonProvince == dataProvince) {
+              json.features[j].properties.total = total
+              break
+            }
+          }
+        }
+
+        // draw the choropleth
+        Choropleth(json, {
+          container: 'body',
+          colorScale: colorScale,
+          width: w,
+          height: h,
+          path: path,
+          colors: colors
+        })
+
+      })
+
+    });
+    d3.select("body").append("div")
+    .attr("class", "tooltip1")
+    .html("<em><ul><li>&ldquo;Province&rdquo; here also refers to provincial-level municipalities and autonomous regions.</li><li>One temporary activity may take place in multiple provinces; this map shows all provinces where activities have taken place, therefore one activity may be counted in multiple provinces.</li><li>This map does not show the one activity that was filed to take place in all of China.</li><li>Only activities that began on or before June 30, 2017 are shown here. The duration of any given temporary activity may extend beyond that date.</li></ul></em>");
+
+
+
+
+    </script>
+  </body>
+</html>
 
