--- a/index_TA_histo_days.html
+++ b/index_TA_histo_days.html
@@ -146,14 +146,14 @@ padding:5px;
 
 
   <div id="wrapper">
-  <div id="header"><h1>TEST2 Lengths of Temporary Activities Lasting Less than One Month, January-June 2017</h1></div>
+  <div id="header"><h1>TEST3 Lengths of Temporary Activities Lasting Less than One Month, January-June 2017</h1></div>
 <div id="histogramdiv"></div>
 
 
   </div>
 
-<script src="//d3js.org/d3.v3.min.js"></script>
-<script src="//labratrevenge.com/d3-tip/javascripts/d3.tip.v0.6.3.js"></script>
+<script src="http://d3js.org/d3.v3.min.js"></script>
+<script src="http://labratrevenge.com/d3-tip/javascripts/d3.tip.v0.6.3.js"></script>
 <script>
 
 //changed bottom margin to allow for rotated x-axis labels
