--- a/index_TA_histo_days.html
+++ b/index_TA_histo_days.html
@@ -146,13 +146,13 @@ padding:5px;
 
 
   <div id="wrapper">
-  <div id="header"><h1>TEST6 Lengths of Temporary Activities Lasting Less than One Month, January-June 2017</h1></div>
+  <div id="header"><h1>TEST7 Lengths of Temporary Activities Lasting Less than One Month, January-June 2017</h1></div>
 <div id="histogramdiv"></div>
 
 
   </div>
 
-<script src="http://d3js.org/d3.v3.min.js"></script>
+<script src="./d3.v3.min.js"></script>
 <script src="./d3.tip.v0.6.3.js"></script>
 <script>
 
