--- a/index_TA_histo_months.html
+++ b/index_TA_histo_months.html
@@ -146,14 +146,14 @@ padding:5px;
 
 
   <div id="wrapper">
-  <div id="header"><h1>Lengths of Temporary Activities Lasting Less than One Month, January-June 2017</h1></div>
+  <div id="header"><h1>Lengths of Temporary Activities, in Months, January-June 2017</h1></div>
 <div id="histogramdiv"></div>
 
 
   </div>
 
-<script src="./d3.v3.min.js"></script>
-<script src="./d3.tip.v0.6.3.js"></script>
+  <script src="./d3.v3.min.js"></script>
+  <script src="./d3.tip.v0.6.3.js"></script>
 <script>
 
 //changed bottom margin to allow for rotated x-axis labels
@@ -196,7 +196,7 @@ var svg = d3.select("body").append("svg")
 
 svg.call(tip);
 
-d3.tsv("TAlengthday.tsv", type, function(error, data) {
+d3.tsv("TAlengthmonth.tsv", type, function(error, data) {
   x.domain(data.map(function(d) { return d.length; }));
   y.domain([0, d3.max(data, function(d) { return d.number; })]);
 
@@ -244,4 +244,3 @@ function type(d) {
 }
 
 </script>
-
