--- a/index_RO_by_origin.html
+++ b/index_RO_by_origin.html
@@ -105,7 +105,7 @@ top:-80px;
 <body>
 
   <div id="wrapper">
-  <div id="header"><h1>Number of Representative Offices from Various Countries or Regions, January-June 2017</h1></div>
+  <div id="header"><h1>Country/Region of Origin of NGOs with Registered Representative Offices, January-June 2017</h1></div>
   <div id="pieChart"></div>
   </div>
 
@@ -289,7 +289,7 @@ var pie = new d3pie("pieChart", {
 });
 d3.select("body").append("div")
 .attr("class", "tooltip")
-.html("<em><ul><li>Each representative office has only one country or region or origin, as listed by the Ministry of Public Security website.</li><li>For foreign NGOs that have opened multiple representative offices, each office is included in these totals.</li></ul></em>");
+.html("<em><ul><li>Each representative office has only one country or region of origin, as listed by the Ministry of Public Security website.</li><li>For foreign NGOs that have opened multiple representative offices, each office is included in these totals.</li></ul></em>");
 </script>
 
 </body>
