--- a/index_RO_dash2.html
+++ b/index_RO_dash2.html
@@ -172,7 +172,7 @@ padding:0px;
 
 
 <div id="wrapper">
-<div id="header"><h1>Representative Offices’ Fields of Work by Country/Region of Origin January-June 2017</h1></div>
+<div id="header"><h1>Number of Representative Offices in Certain Fields of Work, by NGOs’ Country/Region of Origin, January-June 2017</h1></div>
 <div id='legenddiv'></div>
 <div id='piediv'></div>
 <div id='histogramdiv'></div>
@@ -996,6 +996,6 @@ dashboard('#dashboard',freqData);
 
 d3.select("body").append("div")
 .attr("class", "tooltip1")
-.html("<em><ul><li>Each foreign NGO representative office may be engaged in multiple fields of work, as listed on the Ministry of Public Security website, and therefore the totals shown in this chart are higher than the total number of representative offices during the same period.</li><li>Each representative office has only one country or region or origin, as listed by the Ministry of Public Security website.</li><li>For foreign NGOs that have opened multiple representative offices, each office is included in these totals.</li></ul></em>");
+.html("<em><ul><li>Each foreign NGO representative office may be engaged in multiple fields of work, and therefore the totals shown in this chart are higher than the total number of representative offices during the same period. We designated fields based on the work descriptions listed on the Ministry of Public Security website.</li><li>Each representative office has only one country or region of origin, as listed by the Ministry of Public Security website.</li><li>For foreign NGOs that have opened multiple representative offices, each office is included in these totals.</li></ul></em>");
 
 </script>
