--- a/index_TA_by_origin.html
+++ b/index_TA_by_origin.html
@@ -259,7 +259,7 @@ var pie = new d3pie("pieChart", {
 });
 d3.select("body").append("div")
 .attr("class", "tooltip")
-.html("<em><ul><li>Only activities that began on or before June 30, 2017 are shown here. The duration of any given temporary activity may extend beyond that date.</li></ul></em>");
+.html("<em><ul><li>Only one country or region of origin for each organization is included, based on organizations’ public information.</li><li>Only activities that began on or before June 30, 2017 are shown here. The duration of any given temporary activity may extend beyond that date.</li></ul></em>");
 </script>
 
 </body>
