--- a/index_TA_dash2.html
+++ b/index_TA_dash2.html
@@ -842,7 +842,7 @@ dashboard('#dashboard',freqData);
 
 d3.select("body").append("div")
 .attr("class", "tooltip1")
-.html("<em><ul><li>Any given temporary activity may be related to multiple fields of work, and therefore the totals shown in this chart are higher than the total number of temporary activities during the same period.</li><li>Only activities that began on or before June 30, 2017 are shown here. The duration of any given temporary activity may extend beyond that date.</li><li>In our categorization scheme, each organization carrying out a temporary activity in China has only one country or region of origin.</li></ul></em>");
+.html("<em><ul><li>Each temporary activity may be related to multiple fields of work, and therefore the totals shown in this chart are higher than the total number of temporary activities during the same period. We designated fields based on the activity titles listed on the Ministry of Public Security website.</li><li>Only activities that began on or before June 30, 2017 are shown here. The duration of any given temporary activity may extend beyond that date.</li><li>Only one country or region of origin for each organization is included, based on organizations’ public information.</li></ul></em>");
 
 </script>
 
