--- a/index.html
+++ b/index.html
@@ -285,6 +285,25 @@
         }
       },
       {
+        "type": "Feature",
+        "geometry": {
+          "type": "Point",
+          "coordinates": [
+             117.668008, 39.028547
+          ]
+        },
+        "properties": {
+          "orgname_en": "All Japan Seamen’s Union",
+          "orgname_ch": "全日本海员工会",
+          "psu_en": "Tianjin General Labor Union",
+          "originloc": "Japan",
+          "sector": "Labor and Migrants",
+          "regloc": "Tianjin",
+          "regdate": "July 11, 2017",
+          "actarea": "Tianjin"
+        }
+      },
+      {
   "type": "Feature",
   "geometry": {
     "type": "Point",
@@ -494,9 +513,25 @@
    "website_ch": "http://madaifu.info/wordpress/zh/"
  }
 },
-
-
-
+{
+  "type": "Feature",
+  "geometry": {
+    "type": "Point",
+    "coordinates": [
+       116.793383, 40.589713
+    ]
+  },
+  "properties": {
+    "orgname_en": "China Cable Chamber of Commerce (Beijing)",
+    "orgname_ch": "中国光电线缆商会",
+    "psu_en": "Beijing Commission of Economy and Informatization",
+    "originloc": "Hong Kong",
+    "sector": "Trade, International Relations/Exchange",
+    "regloc": "Beijing",
+    "regdate": "July 6, 2017",
+    "actarea": "Beijing"
+  }
+},
       {
   "type": "Feature",
   "geometry": {
@@ -506,7 +541,7 @@
     ]
   },
   "properties": {
-    "orgname_en": "China Cable Chamber of Commerce",
+    "orgname_en": "China Cable Chamber of Commerce (Tianjin)",
     "orgname_ch": "中国光电线缆商会",
     "psu_en": "Tianjin Commission of Commerce",
     "originloc": "Hong Kong",
@@ -662,6 +697,26 @@
           "actarea": "Guangdong",
           "website_en": "http://www.cma.org.hk/",
           "website_ch": "http://www.cma.org.hk/"
+        }
+      },
+      {
+        "type": "Feature",
+        "geometry": {
+          "type": "Point",
+          "coordinates": [
+             116.447946, 39.946294
+          ]
+        },
+        "properties": {
+          "orgname_en": "ClientEarth",
+          "orgname_ch": "克莱恩斯欧洲环保协会",
+          "psu_en": "Ministry of Environmental Protection",
+          "originloc": "United Kingdom",
+          "sector": "Environment, Law and Governance",
+          "regloc": "Beijing",
+          "regdate": "July 5, 2017",
+          "actarea": "Beijing, Tianjin, Hebei, Shanxi, Inner Mongolia, Liaoning, Jilin, Heilongjiang, Shanghai, Jiangsu, Zhejiang, Anhui, Fujian, Jiangxi, Shandong, Henan, Hubei, Hunan, Guangdong, Guangxi, Hainan, Chongqing, Sichuan, Guizhou, Yunnan, Shaanxi, Gansu, Qinghai, Ningxia",
+          "website_en": "https://www.clientearth.org/location/china/"
         }
       },
       {
@@ -829,8 +884,6 @@
           "website_en": "http://www.dubaichamber.com/"
         }
       },
-
-
       {
         "type": "Feature",
         "geometry": {
@@ -851,6 +904,26 @@
           "actarea": "China",
           "website_en": "http://www.efchina.org/",
           "website_ch": "http://www.efchina.org/Front-Page-zh"
+        }
+      },
+      {
+        "type": "Feature",
+        "geometry": {
+          "type": "Point",
+          "coordinates": [
+             116.422412, 39.948734
+          ]
+        },
+        "properties": {
+          "orgname_en": "Environmental Defense Fund",
+          "orgname_ch": "美国环保协会",
+          "psu_en": "Ministry of Environmental Protection",
+          "originloc": "United States",
+          "sector": "Environment",
+          "regloc": "Beijing",
+          "regdate": "July 5, 2017",
+          "actarea": "China",
+          "website_en": "https://www.edf.org/"
         }
       },
             {
@@ -1021,8 +1094,46 @@
 "website_en": "https://globalvolunteers.org/china/"
 }
 },
-
-
+{
+  "type": "Feature",
+  "geometry": {
+    "type": "Point",
+    "coordinates": [
+       108.365671, 22.793536
+    ]
+  },
+  "properties": {
+    "orgname_en": "Guangxi Business Association of Canada",
+    "orgname_ch": "加拿大广西总商会",
+    "psu_en": "Guangxi Department of Commerce",
+    "originloc": "Canada",
+    "sector": "Trade",
+    "regloc": "Guangxi",
+    "regdate": "July 4, 2017",
+    "actarea": "Guangxi",
+    "website_en": "http://www.gbac.ca/localities/%E5%8A%A0%E6%8B%BF%E5%A4%A7%E5%B9%BF%E8%A5%BF%E6%80%BB%E5%95%86%E4%BC%9A",
+    "website_ch": "http://www.gbac.ca/zh-hans/localities/%E5%8A%A0%E6%8B%BF%E5%A4%A7%E5%B9%BF%E8%A5%BF%E6%80%BB%E5%95%86%E4%BC%9A"
+  }
+},
+{
+  "type": "Feature",
+  "geometry": {
+    "type": "Point",
+    "coordinates": [
+       106.532407, 29.581934
+    ]
+  },
+  "properties": {
+    "orgname_en": "Gyonggido Business & Science Accelerator (Chongqing)",
+    "orgname_ch": "韩国（财）京畿道经济科学振兴院",
+    "psu_en": "Chongqing Commission of Commerce",
+    "originloc": "South Korea",
+    "sector": "Trade, Economic Development",
+    "regloc": "Chongqing",
+    "regdate": "June 22, 2017",
+    "actarea": "Chongqing"
+  }
+},
       {
         "type": "Feature",
         "geometry": {
@@ -1147,8 +1258,27 @@
           "website_ch": "http://www2.hss.de/china/ch/home.html"
         }
       },
-
-
+      {
+        "type": "Feature",
+        "geometry": {
+          "type": "Point",
+          "coordinates": [
+             98.491422, 39.695021
+          ]
+        },
+        "properties": {
+          "orgname_en": "Hanns Seidel Foundation (Gansu)",
+          "orgname_ch": "汉斯·赛德尔基金会",
+          "psu_en": "Gansu Department of Education",
+          "originloc": "Germany",
+          "sector": "Education",
+          "regloc": "Gansu",
+          "regdate": "June 13, 2017",
+          "actarea": "Hubei, Qinghai, Xinjiang, Inner Mongolia, Gansu",
+          "website_en": "http://www2.hss.de/china/en/home.html",
+          "website_ch": "http://www2.hss.de/china/ch/home.html"
+        }
+      },
       {
         "type": "Feature",
         "geometry": {
@@ -1258,8 +1388,6 @@
           "website_ch": "http://www.hkiac.org/zh-hans"
         }
       },
-
-
       {
         "type": "Feature",
         "geometry": {
@@ -1273,7 +1401,7 @@
           "orgname_ch": "互满爱人与人国际运动联合会",
           "psu_en": "Yunnan Office of Poverty Alleviation and Development",
           "originloc": "Switzerland",
-          "sector": "Rural Issues/Development, Youth, Education, Health, Environment, Poverty Alleviation, Disaster Relief",
+          "sector": "Rural Issues/Development, Youth, Education, Health, Environment, Poverty Alleviation, Disaster Relief, Women's Issues",
           "regloc": "Yunnan",
           "regdate": "April 10, 2017",
           "actarea": "Yunnan",
@@ -1281,7 +1409,26 @@
           "website_ch": "http://www.hppchina.org.cn/"
         }
       },
-
+      {
+        "type": "Feature",
+        "geometry": {
+          "type": "Point",
+          "coordinates": [
+             116.408864, 39.955508
+          ]
+        },
+        "properties": {
+          "orgname_en": "IFPI",
+          "orgname_ch": "国际唱片业协会",
+          "psu_en": "State Administration of Press, Publication, Radio, Film and Television",
+          "originloc": "Switzerland",
+          "sector": "Trade, Arts and Culture",
+          "regloc": "Beijing",
+          "regdate": "June 27, 2017",
+          "actarea": "China",
+          "website_en": "http://www.ifpi.org/"
+        }
+      },
       {
   "type": "Feature",
   "geometry": {
@@ -1448,7 +1595,25 @@
     "website_ch": "http://www.ipni.ac.cn/ipni/home/index.html"
   }
 },
-
+{
+  "type": "Feature",
+  "geometry": {
+    "type": "Point",
+    "coordinates": [
+       117.181207, 39.118767
+    ]
+  },
+  "properties": {
+    "orgname_en": "International Silkroad Trade and Culture Association",
+    "orgname_ch": "国际丝路经贸和文化协会",
+    "psu_en": "Tianjin Commission of Commerce",
+    "originloc": "Turkey",
+    "sector": "Trade, Arts and Culture, Tourism, International Relations/Exchange",
+    "regloc": "Tianjin",
+    "regdate": "July 11, 2017",
+    "actarea": "China"
+  }
+},
       {
         "type": "Feature",
         "geometry": {
@@ -1491,7 +1656,6 @@
           "website_en": "http://www.jama-english.jp/"
         }
       },
-
       {
         "type": "Feature",
         "geometry": {
@@ -1513,6 +1677,26 @@
           "website_ch": "https://www.jetro.go.jp/china/"
         }
       },
+      {
+        "type": "Feature",
+        "geometry": {
+          "type": "Point",
+          "coordinates": [
+             116.439755, 39.907465
+          ]
+        },
+        "properties": {
+          "orgname_en": "Japan Iron and Steel Federation",
+          "orgname_ch": "一般社团法人日本铁钢连盟",
+          "psu_en": "Beijing Commission of Commerce",
+          "originloc": "Japan",
+          "sector": "Trade",
+          "regloc": "Beijing",
+          "regdate": "July 5, 2017",
+          "actarea": "Beijing"
+        }
+      },
+
       {
   "type": "Feature",
   "geometry": {
@@ -1598,8 +1782,25 @@
 "website_ch": "http://www.japanchina.jp/cn/"
 }
 },
-
-
+{
+  "type": "Feature",
+  "geometry": {
+    "type": "Point",
+    "coordinates": [
+       116.438088, 39.908051
+    ]
+  },
+  "properties": {
+    "orgname_en": "Japan-China Investment Promotion Organization",
+    "orgname_ch": "日本日中投资促进机构",
+    "psu_en": "Beijing Commission of Commerce",
+    "originloc": "Japan",
+    "sector": "Trade",
+    "regloc": "Beijing",
+    "regdate": "July 5, 2017",
+    "actarea": "Beijing, Tianjin, Hebei, Shanghai, Jiangsu, Anhui, Fujian, Henan, Guangdong, Sichuan"
+  }
+},
       {
         "type": "Feature",
         "geometry": {
@@ -2135,9 +2336,27 @@
     "website_ch": "http://www.gatesfoundation.org/zh/"
   }
 },
-
-
-
+{
+  "type": "Feature",
+  "geometry": {
+    "type": "Point",
+    "coordinates": [
+       103.832795, 36.047358
+    ]
+  },
+  "properties": {
+    "orgname_en": "Oxfam (Gansu)",
+    "orgname_ch": "乐施会",
+    "psu_en": "Gansu Department of Education",
+    "originloc": "Hong Kong",
+    "sector": "Education, Poverty Alleviation, Disaster Relief, Youth",
+    "regloc": "Gansu",
+    "regdate": "June 13, 2017",
+    "actarea": "Gansu",
+    "website_en": "http://www.oxfam.org.hk/en/China.aspx",
+    "website_ch": "http://www.oxfam.org.cn/"
+  }
+},
       {
 "type": "Feature",
 "geometry": {
@@ -2147,7 +2366,7 @@
 ]
 },
 "properties": {
-"orgname_en": "Oxfam",
+"orgname_en": "Oxfam (Guangdong)",
 "orgname_ch": "乐施会",
 "psu_en": "Guangdong Department of Civil Affairs",
 "originloc": "Hong Kong",
@@ -2159,8 +2378,47 @@
 "website_ch": "http://www.oxfam.org.cn/"
 }
 },
-
-
+{
+  "type": "Feature",
+  "geometry": {
+    "type": "Point",
+    "coordinates": [
+       116.445302, 39.907563
+    ]
+  },
+  "properties": {
+    "orgname_en": "Pacific Asia Travel Association",
+    "orgname_ch": "亚太旅游协会",
+    "psu_en": "China National Tourism Administration",
+    "originloc": "United States",
+    "sector": "Tourism",
+    "regloc": "Beijing",
+    "regdate": "July 7, 2017",
+    "actarea": "China",
+    "website_en": "http://www.pata.org/",
+    "website_ch": "http://patachina.org/"
+  }
+},
+{
+  "type": "Feature",
+  "geometry": {
+    "type": "Point",
+    "coordinates": [
+       106.564714, 29.555550
+    ]
+  },
+  "properties": {
+    "orgname_en": "Pacific Environment",
+    "orgname_ch": "太平洋环境资源中心",
+    "psu_en": "Chongqing Department of Environmental Protection",
+    "originloc": "United States",
+    "sector": "Civil Society Capacity-Building, Environment",
+    "regloc": "Chongqing",
+    "regdate": "June 22, 2017",
+    "actarea": "Hubei, Qinghai, Chongqing, Gansu, Jiangsu, Hunan, Anhui",
+    "website_en": "https://www.pacificenvironment.org/"
+  }
+},
       {
         "type": "Feature",
         "geometry": {
@@ -2182,7 +2440,27 @@
           "website_ch": "http://paulsoninstitute.org.cn/"
         }
       },
-
+      {
+        "type": "Feature",
+        "geometry": {
+          "type": "Point",
+          "coordinates": [
+             108.957691, 34.229866
+          ]
+        },
+        "properties": {
+          "orgname_en": "Plan International",
+          "orgname_ch": "国际计划",
+          "psu_en": "Shaanxi Women’s Federation",
+          "originloc": "United States",
+          "sector": "Women’s Issues, Youth",
+          "regloc": "Shaanxi",
+          "regdate": "June 30, 2017",
+          "actarea": "Beijing, Anhui, Jiangxi, Hunan, Sichuan, Yunnan, Shaanxi, Qinghai, Ningxia",
+          "website_en": "https://plan-international.org/china&sa=D&ust=1499364076281000&usg=AFQjCNHdQJElNmab8dj95SWy0RvxnNjsWQ",
+          "website_ch": "https://plan-international.org/zh-hans/china"
+        }
+      },
       {
   "type": "Feature",
   "geometry": {
@@ -2535,7 +2813,7 @@
         "properties": {
           "orgname_en": "The Software Alliance",
           "orgname_ch": "商业软件联盟",
-          "psu_en": "State Administration of Press, Publication, Radio, Film, and Television (National Copyright Administration)",
+          "psu_en": "National Copyright Administration",
           "originloc": "United States",
           "sector": "Trade",
           "regloc": "Beijing",
@@ -2669,7 +2947,27 @@
           "website_en": "https://www.uschina.org/"
         }
       },
-
+      {
+        "type": "Feature",
+        "geometry": {
+          "type": "Point",
+          "coordinates": [
+             116.447873, 39.971215
+          ]
+        },
+        "properties": {
+          "orgname_en": "United States Information Technology Office",
+          "orgname_ch": "美国信息产业机构",
+          "psu_en": "Beijing Commission of Economy and Informatization",
+          "originloc": "United States",
+          "sector": "Trade",
+          "regloc": "Beijing",
+          "regdate": "July 6, 2017",
+          "actarea": "Beijing",
+          "website_en": "http://www.usito.org/",
+          "website_ch": "http://www.usito.org/zh-hans"
+        }
+      },
       {
         "type": "Feature",
         "geometry": {
